--- a/.gitignore
+++ b/.gitignore
@@ -159,4 +159,8 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
+# uv
+uv.lock
+.python-version
+
 .vscode
