--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,8 +14,10 @@ classifiers = [
 [project.urls]
 Homepage = "https://github.com/Nanahuse/VoicepeakWrapper"
 
-[project.optional-dependencies]
-dev = ["pytest", "pytest-asyncio", "flake8", "black", "isort", "mypy"]
-
-[tool.black]
-line-length = 120
+[dependency-groups]
+dev = [
+    "pytest>=9.0.2",
+    "pytest-asyncio>=1.3.0",
+    "ruff>=0.14.10",
+    "ty>=0.0.9",
+]
