--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,3 +21,24 @@ dev = [
     "ruff>=0.14.10",
     "ty>=0.0.9",
 ]
+
+[tool.ruff]
+line-length = 120
+lint.fixable = ["ALL"]
+lint.select = ["ALL"]
+lint.ignore = [
+    "A002",
+    "EM101",
+    "EM102",
+    "FIX002",
+    "S101",
+    "TRY003",
+    "TRY300",
+    "COM812",
+    "RUF002",
+    "D",
+    "TD",
+]
+
+[tool.ruff.per-file-ignores]
+"test/*" = ["INP001", "PLR2004", "SLF001"]
