--- a/.github/workflows/release-on-new-version.yml
+++ b/.github/workflows/release-on-new-version.yml
@@ -44,6 +44,9 @@ jobs:
     needs: check
     if: needs.check.outputs.tag_exists == 'false'
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write # for PyPI trusted publishing.
+      contents: read # for PyPI trusted publishing.
     steps:
       - name: Checkout
         uses: actions/checkout@v6
@@ -54,37 +57,28 @@ jobs:
         uses: astral-sh/setup-uv@v7
 
       - name: Build wheel
-        run: uv build --wheel --out-dir dist --clear
-
-      - name: Locate wheel artifact
         id: wheel
         shell: bash
         run: |
           set -euo pipefail
+          uv build --wheel --out-dir dist --clear
           WHEEL_PATH=$(ls dist/*.whl | head -n 1)
           echo "Found wheel: ${WHEEL_PATH}"
           echo "WHEEL_PATH=${WHEEL_PATH}" >> "$GITHUB_OUTPUT"
           echo "WHEEL_NAME=$(basename "${WHEEL_PATH}")" >> "$GITHUB_OUTPUT"
 
-      - name: Create release
-        id: create_release
-        uses: actions/create-release@v1
+      - name: Create Github draft release
+        uses: softprops/action-gh-release@v2
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: ${{ needs.check.outputs.current_version }}
-          release_name: ver.${{ needs.check.outputs.current_version }}
+          name: ver.${{ needs.check.outputs.current_version }}
           body: |
             Automated release for version ${{ needs.check.outputs.current_version }}.
-          draft: false
+          draft: true
           prerelease: false
+          files: ${{ steps.wheel.outputs.WHEEL_PATH }}
 
-      - name: Upload wheel asset
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ${{ steps.wheel.outputs.WHEEL_PATH }}
-          asset_name: ${{ steps.wheel.outputs.WHEEL_NAME }}
-          asset_content_type: application/octet-stream
+      - name: Publish to PyPI
+        run: uv publish --trusted-publishing always
